Fix overflowing navigation tabs on Chrome.
Caused by em rounding, adding an extra pixel to the box
on Chrome.

Fixes #42

--- a/src/style/Textpattern/sass/modules/fluxbb/_navigation.scss
+++ b/src/style/Textpattern/sass/modules/fluxbb/_navigation.scss
@@ -25,7 +25,7 @@
 
         display: block;
         border: 1px solid $color-border;
-        padding: 0.5384615em 1em;
+        padding: 0.5384616em 1em;
         color: $color-text;
         background-color: $color-background-box;
 
